z-index problm fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -1328,11 +1328,11 @@ input:focus+.fa {
     width: 0;
 }
 
-.modal,
+/* .modal,
 .select2-container {
     width: 100% !important;
-    z-index: 10000 !important;
-}
+    z-index: 100000000 !important;
+} */
 
 
 /* image option dropdown */
@@ -1913,7 +1913,7 @@ tbody tr:hover {
 /* navbar */
 
 .navbar-style {
-    z-index: 1000000;
+    z-index: 999;
     width: 100%;
     position: fixed;
     background-color: #fff;
@@ -3411,7 +3411,7 @@ input:checked+.slider:before {
     display: inline-block;
     margin-left: 5px;
     margin-top: 5px;
-    padding: 8px 20px !important;
+    padding: 4px 20px !important;
     padding-left: 20px;
     position: relative;
     max-width: 100%;
@@ -3423,9 +3423,6 @@ input:checked+.slider:before {
 .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
     background-color: var(--grayshade-300) !important;
     border: none;
-    /* border-right: 1px solid #aaa; */
-    /* border-top-left-radius: 4px; */
-    /* border-bottom-left-radius: 4px; */
     color: #fff !important;
     cursor: pointer;
     font-size: 1em;
@@ -3434,7 +3431,7 @@ input:checked+.slider:before {
     padding: 0px 7px;
     position: absolute;
     left:5px !important;
-    top: 8px !important;
+    top: 6px !important;
 }
 .select2-container--default .select2-selection--multiple .select2-selection__choice__display {
     cursor: default;
